# pywebdev

./: .gitignore  README.md  master_materi.md  pyproject.toml  shell.nix
assignments/day_4/hello_world/: hello_django.py  hello_fastapi.py  index.html
assignments/day_5/assignment5/: documentation.md
assignments/day_6/: README.md  pyproject.toml
assignments/day_6/.nix-shell/db/: current_logfiles  postgresql.conf  postmaster.opts  postmaster.pid
assignments/day_6/.nix-shell/db/base/1/: 2619  2619_fsm  2619_vm  2696  2840  2840_vm  2841  pg_internal.init
assignments/day_6/.nix-shell/db/base/16385/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13655  13655_fsm  13655_vm  13659  13660  13660_fsm  13660_vm  13664  13665  13665_fsm  13669  13670  13670_fsm  13670_vm  13674  174  175  2228  2337  2579  2600  2600_fsm  2600_vm  2601  2601_fsm  2601_vm  (+195 more)
assignments/day_6/.nix-shell/db/base/16386/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13655  13655_fsm  13655_vm  13659  13660  13660_fsm  13660_vm  13664  13665  13665_fsm  13665_vm  13669  13670  13670_fsm  13670_vm  13674  174  175  2187  2228  2337  2579  2600  2600_fsm  2600_vm  2601  (+187 more)
assignments/day_6/.nix-shell/db/base/5/: 2619  pg_internal.init
assignments/day_6/.nix-shell/db/global/: 1214  1232  1233  1260  1260_vm  1262  2671  2672  2676  2677  pg_control  pg_internal.init
assignments/day_6/project6/project6/: settings.py
day_4/materi/: belajar_input.py  fungsi.py
(+12 files in other folders)
